# pyntegritydb

./: .codecov.yml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  python-package.yml  run-tests.yml
docs/: USAGE.md  requirements.txt
docs/source/: conf.py  guia_inicio.rst  index.rst  modulos.rst
examples/: config.yml  test_config_script.py
pyntegritydb/: cli.py  connect.py  metrics.py  report.py
tests/: setup_test_db.py  test_cli.py  test_integration.py  test_report.py
tests/db_dumps/: mysql_init.sql  postgres_init.sql
