[project]
name = "pyntegritydb"
version = "0.1.0"
authors = [
  { name = "Osvaldo Trujillo", email = "osvaldo.trujillo.ingenieria@gmail.com" },
]
description = "A clean and fast Python client for football analytics data from Understat."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy==2.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/osvaldomx/pyntegritydb"
Repository = "https://github.com/osvaldomx/pyntegritydb"
Changelog = "https://github.com/osvaldomx/pyntegritydb/releases/tag/v0.2.0"
Issues = "https://github.com/osvaldomx/pyntegritydb/issues"